# owlo_gui

./: .gitignore  README.md  pyproject.toml
camera_profile_viewer/: __init__.py  main.py  model.py  view.py
tests/: test_model.py
