[project]
name = "camera_profile_viewer"
version = "0.1.0"
description = "A small application produced by our favorite candidate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pyside6>=6.9.1",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.ruff]
line-length = 120 # Set max line length to 120 characters

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101", # Use of assert detected (used for tests)
]